--- a/views/index.ejs
+++ b/views/index.ejs
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(https://static.aproveitaabc.com.br/images/5013_doce.png);
+            background-image: url(https://image.freepik.com/fotos-gratis/bolo-nu-decorado-com-frutas_109285-8190.jpg);
           }
         </style>
         <!-- Bootstrap core JS-->
